--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0,0,0,.7);
   float: left;
   position: fixed;
   width: 100%;
@@ -49,10 +49,10 @@ a {
   text-decoration: none;
 }
 
-a:link { color:#000080; }
-a:visited { color:#0070BA; }
-a:hover { color:#0070BC; }
-a:active { color:#0080BD; }
+a:link { color:#ffffff; }
+a:visited { color:#ffffff; }
+a:hover { color:#ffffff; }
+a:active { color:#ffffff; }
 
 article {
   padding-top: 100px;
@@ -65,20 +65,26 @@ article {
 
 figcaption {
   font-size: 1.5em;
+  line-height: normal;
 }
 
 h1 {
   font-size: 3em;
+  line-height: 140%;
 }
 
 h3 {
   font-size: 2em;
+  line-height: normal;
 }
 
 .author {
   font-size: 1.5em;
+  line-height: 140%;
 }
 
 p {
   font-size: 18px;
+  line-height: 140%;
+  margin-bottom: 20px;
 }
