--- a/css/style.css
+++ b/css/style.css
@@ -51,8 +51,8 @@ a {
 
 a:link { color:#ffffff; }
 a:visited { color:#ffffff; }
-a:hover { color:#ffffff; }
-a:active { color:#ffffff; }
+a:hover { color:#00ffff; }
+a:active { color:#00ffff; }
 
 article {
   padding-top: 100px;
